2006-05-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/copy/images/rtpbin-nojrtp.png:
	* src/copy/images/rtpbin.png:
	* src/htdocs/documentation/rtp.xml:
	* src/htdocs/images/Makefile.am:
	* src/htdocs/images/rtp-gst.png:
	* src/htdocs/images/rtp-gst2.png:
	* src/htdocs/images/rtpbin-nojrtp.png:
	* src/htdocs/images/rtpbin.png:
	* src/htdocs/modules/modules.xml:
	* src/htdocs/news/news.xml:
	  fix rtp docs and some GStreamer misspellings

2006-05-11  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.4.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	GNonlin 0.10.4 release.

2006-05-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	  fix up versions and milestones

2006-05-06  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Even more milestones

2006-05-04  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.3.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:

	  Releases of good and bad 

2006-05-01  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones.

2006-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.4.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	  new gst-python release

2006-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.5.xml:
	* src/htdocs/releases/gstreamer/Makefile.am: