@@ -1,0 +1,191 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-base</module>
+  <module-fancy>GStreamer Base Plug-ins</module-fancy>
+  <name>Leave the gun</name>
+  <version>0.10.7</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Base Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+This module contains a set of reference plugins, base classes for other
+plugins, and helper libraries.
+
+This module is kept up-to-date together with the core developments.  Element
+writers should look at the elements in this module as a reference for
+their development.
+
+This module contains elements for, among others:
+<ul>
+  <li>device plugins: x(v)imagesink, alsa, v4lsrc, cdparanoia</li>
+  <li>containers: ogg</li>
+  <li>codecs: vorbis, theora</li>
+  <li>text: textoverlay, subparse</li>
+  <li>sources: audiotestsrc, videotestsrc, gnomevfssrc</li>
+  <li>network: tcp</li>
+  <li>typefind</li>
+  <li>audio processing: audioconvert, adder, audiorate, audioscale, volume</li>
+  <li>visualisation: libvisual</li>
+  <li>video processing: ffmpegcolorspace</li>
+  <li>aggregate elements: decodebin, playbin</li>
+</ul>
+
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>typefind improvements</feature>
+    <feature>bug-fixes in textoverlay, audioconvert, videotestsrc, multifdsink and audio source/sink base classes</feature>
+    <feature>Ice-cast metadata support has moved from gnomevfssrc to the icydemux element in gst-plugins-good</feature>
+    <feature>audioresample now supports floating point samples</feature>
+    <feature>Adder element fixes.</feature>
+    <feature>Fixes for network playback and audio resampling in playbin</feature>
+  </features>
+
+  <applications>
+  </applications>
+    <contributors>
+	<person>Andy Wingo</person>
+	<person>David Schleef</person>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Michael Smith</person>
+	<person>Sebastien Moutte</person>
+	<person>Sjoerd Simons</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wim Taymans</person>
+	<person>Young-Ho Cha</person>
+  </contributors>
+
+  <api>
+    <additions>
+    <item>client-fd-removed signal added to multifdsink</item>
+    <item>stream-info-value-array property added to playbin</item>
+    <item>gst_video_calculate_display_ratio() in libgstvideo</item>
+    </additions>
+<!--
+    <depreciations>
+    </depreciations>
+-->
+  </api>
+
+  
+
+  <bugs>
+    <bug>
+      <id>340060</id>
+      <summary>[adder] handle newsegment events properly</summary>
+    </bug>
+    <bug>
+      <id>340375</id>
+      <summary>[API 0.11] [patch] typefind to differentiate between mp4 ...</summary>
+    </bug>
+    <bug>
+      <id>339405</id>
+      <summary>[textoverlay] can't display '\n' character</summary>
+    </bug>
+    <bug>
+      <id>338657</id>
+      <summary>[patch] adder should send events from src-pad to all sink...</summary>
+    </bug>
+    <bug>
+      <id>338919</id>
+      <summary>[patch] alsasink should also query witdh capabilities fro...</summary>
+    </bug>
+    <bug>
+      <id>301759</id>
+      <summary>[audioresample] float audio support (for OSX audio sinks)</summary>
+    </bug>
+    <bug>
+      <id>331901</id>
+      <summary>[videotestsrc] framerate=0/1 gives assertion error</summary>
+    </bug>
+    <bug>
+      <id>333657</id>
+      <summary>Replacing icy demuxing in gnomevfssrc</summary>
+    </bug>
+    <bug>
+      <id>336339</id>
+      <summary>[audioresample] should support width != 16</summary>
+    </bug>
+    <bug>
+      <id>338718</id>
+      <summary>[patch] [audioconvert] correctly clip float samples &gt; 1.0</summary>
+    </bug>
+    <bug>
+      <id>338778</id>
+      <summary>[patch] Bad audio with ASX files</summary>
+    </bug>
+    <bug>
+      <id>338991</id>
+      <summary>[patch] Videoscale doesn't pass on pixel-aspect ratio</summary>
+    </bug>
+    <bug>
+      <id>339574</id>
+      <summary>[patch] Race condition in multifdsink can lead to spuriou...</summary>
+    </bug>
+    <bug>
+      <id>339786</id>
+      <summary>[typefinding] wavpack typefinding doesn't always work</summary>
+    </bug>
+    <bug>
+      <id>340369</id>
+      <summary>[volume element] &quot; volume &quot; property range insufficient</summary>
+    </bug>
+    <bug>
+      <id>340379</id>
+      <summary>[playbin] doesn't insert audioresample, causes problems w...</summary>
+    </bug>
+    <bug>
+      <id>340392</id>
+      <summary>Problem with internal-decodebin</summary>
+    </bug>
+    <bug>
+      <id>341160</id>
+      <summary>[multifdsink] client_status enum has an uninitialized nick</summary>
+    </bug>
+    <bug>
+      <id>341182</id>
+      <summary>Accessing playbin's streaminfo property from high languag...</summary>
+    </bug>
+    <bug>
+      <id>341432</id>
+      <summary>[playbin] automatically get icecast metadata requiring ic...</summary>
+    </bug>
+    <bug>
+      <id>341542</id>
+      <summary>some users have an assertion failed: (GST_VIDEO_SINK_WIDT...</summary>
+    </bug>
+    <bug>
+      <id>341557</id>
+      <summary>Map GST_TAG_IMAGE &lt; = &gt; ID3v2 APIC tag</summary>
+    </bug>
+  </bugs>
+
+</release>
