@@ -1,0 +1,149 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gstreamer</module>
+  <module-fancy>GStreamer</module-fancy>
+  <name>Take the cannoli</name>
+  <version>0.10.6</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+core of the GStreamer streaming media framework.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+<p>
+The 0.10.x series has been reworked for threadsafety.  It also features
+various feature additions and enchancements.
+</p>
+<p>
+This module, gstreamer, only contains core functionality.
+For actual media playback, you will need other modules.
+<dl>
+<dt>gst-plugins-base</dt>
+<dd>contains a basic set of well-supported plug-ins</dd>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Fixes for the collectpads helper</feature>
+    <feature>Support for proper time recording on server-trickmode streams
+    via the applied_rate parameter of the NewSegment event</feature>
+    <feature>Many bug fixes</feature>
+  </features>
+
+  <applications>
+<p>
+Applications ported to GStreamer 0.10 include Totem, RhythmBox, Sound-Juicer,
+Gnome Media, Flumotion, Amarok, Jamboree, Pitivi, Istanbul, AnnoAmp, Elisa, and others.
+Let us know if you want to be added to this list.
+</p>
+  </applications>
+
+      <contributors>
+	<person>Edward Hervey</person>
+	<person>James Andrewartha</person>
+	<person>Jan Schmidt</person>
+	<person>Maciej Katafiasz</person>
+	<person>Michael Smith</person>
+	<person>Philippe Rouquier</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wim Taymans</person>
+  </contributors>
+
+  <api>
+    <additions>
+      <item>gst_adapter_take_buffer()</item>
+      <item>GST_TAG_IMAGE tag added.</item>
+      <item>gst_event_new_new_segment_full()</item>
+      <item>gst_event_parse_new_segment_full()</item>
+      <item>GstSegment::applied_rate field</item>
+      <item>gst_segment_set_newsegment_full()</item>
+    </additions>
+<!--
+    <depreciations>
+    </depreciations>
+-->
+  </api>
+
+  <bugs>
+    <bug>
+      <id>339808</id>
+      <summary>[patch] mem-leak of bin in gstbin.c</summary>
+    </bug>
+    <bug>
+      <id>338339</id>
+      <summary>[patch] registry cache is always written</summary>
+    </bug>
+    <bug>
+      <id>339843</id>
+      <summary>[patch] fdsink should not handle short writes and non fat...</summary>
+    </bug>
+    <bug>
+      <id>340016</id>
+      <summary>does not build on opensolaris, must always include config...</summary>
+    </bug>
+    <bug>
+      <id>340079</id>
+      <summary>gst-launch wrapper fails with 'No version of tool gst-lau...</summary>
+    </bug>
+    <bug>
+      <id>340174</id>
+      <summary>locking problem in gstbasesink</summary>
+    </bug>
+    <bug>
+      <id>340460</id>
+      <summary>gst-launch no longer supports --version</summary>
+    </bug>
+    <bug>
+      <id>340508</id>
+      <summary>remove glib pre 2.8 hacks and compat stuff</summary>
+    </bug>
+    <bug>
+      <id>340604</id>
+      <summary>gst_mini_object_ref () docs make no mention of writeability</summary>
+    </bug>
+    <bug>
+      <id>340608</id>
+      <summary>leaking caps in padtemplate</summary>
+    </bug>
+    <bug>
+      <id>340697</id>
+      <summary>gstsystemclock hangs when outputting to stdout via fdsink</summary>
+    </bug>
+    <bug>
+      <id>340721</id>
+      <summary>API: add GST_TAG_IMAGE</summary>
+    </bug>
+    <bug>
+      <id>340772</id>
+      <summary>[qtdemux] bails out on Meet The Robinsons trailer</summary>
+    </bug>
+    <bug>
+      <id>341556</id>
+      <summary>gst-launch: print image tags in a human readable form</summary>
+    </bug>
+    <bug>
+      <id>339821</id>
+      <summary>[patch] serializing a GValue with a NULL buffer crashes</summary>
+    </bug>
+  </bugs>
+</release>
